k8s/nginx/deploy/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rick-nginx
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ingress.devcraft.app`) # change to your domain
      kind: Rule
      services:
        - name: rick-nginx
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: devcraft-tls # change to your cert name
